# CTranslate2

./: CMakeLists.txt
cli/: CMakeLists.txt
docker_rocm/: Dockerfile.rocm  whisperX_3.1.1.patch
src/: cuda2hip_macros.hpp
src/cuda/: allocator.cc  helpers.h  primitives.cu  random.cu  random.h  utils.h
src/ops/: bias_add_gpu.cu  conv1d_gpu.cu  dequantize_gpu.cu  gumbel_max_gpu.cu  layer_norm_gpu.cu  mean_gpu.cu  multinomial_gpu.cu  rms_norm_gpu.cu  topk_gpu.cu  topp_mask_gpu.cu
tests/: CMakeLists.txt  benchmark_utils.h
